2004-10-21  Christian Ruppert <arc@users.sf.net>
	* uwm/confparse.lex.l, uwm/confparse.tab.y: added FIND and OR keywords
	  to config file syntax.
	* uwm/confparse.tab.y: added FIND and OR keywords to window command
	  syntax.
	* uwm/confparse.tab.y: fixed syntax for WINDOW command.
	* uwm/confparse.tab.y: fixed syntax for TopFunction.
	* uwm/conf_func_list.h: deleted file.
	* uwm/Makefile.am: removed conf_func_list.h from header file list.
	* uwm/conf_func.c, uwm/conf_func.h: started implementation of new
	  configurable functionality system.

2004-10-20  Christian Ruppert <arc@users.sf.net>
	* uwm/uwm.c(ParseCommandLine): code to print help and version
	  information slightly rewritten.
	* uwm/settings_global_list.h: fixed UWM_GLOBAL_OPTION_NR which was
	  probably forgotten when deleting some old options.
	* uwm/init.c(ReadConfigFile): added some #ifdefs around debug code
	  so we're not too verbose when we don't have to be.
	* uwm/confparse.lex.l: changed LightOf and ShadowOf to be LIGHT_OF
	  and SHADOW_OF which is more consistent with the rest of the config
	  file syntax.
	* uwm/confparselex.l, uwm/confparse.tab.y: added config file keyword
	  NEW.
	* uwm/confparse.tab.y: added the event syntax definitions.
	* uwm/confparse.tab.y: added RecoverFromERR rule to make error recovery
	  more consistent/easier and added '}' as an error delimiter.

2004-10-14  Christian Ruppert <arc@users.sf.net>
	* uwm/urdb: fixed a typo in gvim resources

2004-10-13  Christian Ruppert <arc@users.sf.net>
	* uwm/confparse.tab.y, uwm/confparse.lex.l: redefined atoms for event
	  description language to be more natural.
	* uwm/conf_func.h: removed small bug in _cf_data definition. this file
	  will probably have to be rewritten since the event description
	  language changed significantly since it was initially created.
	* config/urdb: added some selected Xt-resources for textboxes
	* config/urdb: added some more resources for non-gtk gvim
